--- a/apple_retail_analytics/dbt_project.yml
+++ b/apple_retail_analytics/dbt_project.yml
@@ -1,12 +1,11 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'apple_retail_analytics'
-version: '1.0.0'
+name: "apple_retail_analytics"
+version: "1.0.0"
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'apple_retail_analytics'
+profile: "apple_retail_analytics"
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -18,10 +17,9 @@ seed-paths: ["seeds"]
 macro-paths: ["macros"]
 snapshot-paths: ["snapshots"]
 
-clean-targets:         # directories to be removed by `dbt clean`
+clean-targets: # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
-
 
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
@@ -34,3 +32,7 @@ models:
     # Config indicated by + and applies to all files under models/example/
     example:
       +materialized: view
+    bronze:
+      +materialized: view
+    silver:
+      +materialized: table
